--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<script src="https://raw.githubusercontent.com/username/repo/main/script.js"></script>
+<script src="https://raw.githubusercontent.com/SiemensHalske/something.github.io/main/script.js"></script>
 
-"Hello World" 
+"Hello World"
