--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-<script src="https://raw.githubusercontent.com/SiemensHalske/something.github.io/main/script.js"></script>
+<script type="module">
+    import { logMessage } from "https://raw.githubusercontent.com/SiemensHalske/something.github.io/main/script.js";
+    logMessage();
+</script>
 
 "Hello World"
