--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     btn.addEventListener("click", () => logMessage());
 </script>
 
-<button id="hello-btn">Hello World!</button>
+<button id="hello-btn">Hello_xxxxx_World!</button>
 
 
 <!-- animated version number using js-->
