--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<script type="module">
-    import { logMessage } from "https://raw.githubusercontent.com/SiemensHalske/something.github.io/main/script.js";
-    logMessage();
-    const btn = document.getElementById("hello-btn");
-    btn.addEventListener("click", () => logMessage());
-</script>
+<script type="module" src="./script.js"></script>
 
 <button id="hello-btn">Hello_xxxxx_World!</button>
 
+<span id="version"></span>
 
 <!-- animated version number using js-->
 
